AE: QS header transparency (2/2)
Change-Id: I8a44a23a8d30c8c7d68463134a1b154b1d65695b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -743,6 +743,9 @@
     <!-- QS shade transparency -->
     <string name="qs_transparent_shade">QS shade transparency</string>
 
+    <!-- QS header transparency -->
+    <string name="qs_transparent_header">QS header transparency</string>
+
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Lockscreen torch</string>
     <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
