AE: Volume dialog transparency (2/2)
Change-Id: Ic3affca6cb9c696037762d515ce8a1c029381444

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -746,6 +746,9 @@
     <!-- QS header transparency -->
     <string name="qs_transparent_header">QS header transparency</string>
 
+    <!-- Volume dialog transparency -->
+    <string name="volume_dialog_transparency">Volume dialog transparency</string>
+
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Lockscreen torch</string>
     <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
