Add new navbar item - Transparency porn!
Change-Id: I7aeedf3f4cb04360b55c303260654932ad3455ee

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="logo">logo</string>
     <string name="display_animations_title">Display and animations</string>
     <string name="multishit_title">MultiShit</string>
+    <string name="transparency_porn_title">Transparency porn</string>
     <string name="notificaitons_title">Notification drawer</string>
     <string name="statubar_title">Status bar</string>
     <string name="lockscreen_title">Lock screen</string>
