AE: Power/reboot menu transparency (2/2)
Change-Id: I721cbc15f3304ed85fb2e5407afa5d7ab009e0d0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -750,6 +750,9 @@
     <!-- Volume dialog transparency -->
     <string name="volume_dialog_transparency">Volume dialog transparency</string>
 
+    <!-- Power menu and dialogs transparency -->
+    <string name="power_menu_transparency">Power/reboot menu transparency</string>
+
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Lockscreen torch</string>
     <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
