--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -753,6 +753,9 @@
     <!-- Power menu and dialogs transparency -->
     <string name="power_menu_transparency">Power/reboot menu transparency</string>
 
+    <!-- Power/reboot dialogs dim amount -->
+    <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
+
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Lockscreen torch</string>
     <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
