Hide arrows in network traffic indicators [2/2]
Change-Id: I70db6fb5ba77da59e2111f46470e417493a09be3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -129,6 +129,8 @@
     <string name="show_network_traffic_2000">2000 ms</string>
     <string name="network_traffic_autohide">Auto hide</string>
     <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
+    <string name="network_traffic_hidearrow">Hide arrows</string>
+    <string name="network_traffic_hidearrow_summary">Hide the arrows in the traffic indicators</string>
     <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
