AICP Small French Translation : packages_apps_AicpExtras
Change-Id: Iacffcf7103381a9d3a6fad337342686b5b239d2a

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -264,6 +264,13 @@
     <string name="status_bar_weather_font_medium_italic">Moyen italique</string>
     <string name="status_bar_weather_font_black">Noir</string>
     <string name="status_bar_weather_font_black_italic">Noir italique</string>
+    <string name="status_bar_weather_font_dancingscript">DancingScript</string>
+    <string name="status_bar_weather_font_dancingscript_bold">DancingScript gras</string>
+    <string name="status_bar_weather_font_comingsoon">ComingSoon</string>
+    <string name="status_bar_weather_font_notoserif">NotoSerif normal</string>
+    <string name="status_bar_weather_font_notoserif_italic">NotoSerif italique</string>
+    <string name="status_bar_weather_font_notoserif_bold">NotoSerif gras</string>
+    <string name="status_bar_weather_font_notoserif_bold_italic">NotoSerif gras italique</string>
 
     <!-- Recents Fullscreen -->
     <string name="recents_show_fullscreen">Applications récentes en plein écran</string>
@@ -322,11 +329,11 @@
     <string name="lock_clock_font_title">Police d\'écriture de l\'horloge</string>
     <string name="lock_clock_font_summary">Modifier la police d\'écriture de l\'horloge de l\'écran de déverrouillage</string>
     <string name="lock_clock_font_dialog_title">Police d\'écriture de l\'horloge</string>
-    <string name="lock_clock_font_normal">Roboto (par défaut)</string>
+    <string name="lock_clock_font_normal">Roboto</string>
     <string name="lock_clock_font_bold">Roboto gras</string>
     <string name="lock_clock_font_italic">Roboto italique</string>
     <string name="lock_clock_font_bold_italic">Roboto italique gras</string>
-    <string name="lock_clock_font_light_normal">Roboto léger</string>
+    <string name="lock_clock_font_light_normal">Roboto léger (par défaut)</string>
     <string name="lock_clock_font_light_italic">Roboto italique léger</string>
     <string name="lock_clock_font_thin_normal">Roboto fin</string>
     <string name="lock_clock_font_thin_italic">Roboto italique fin</string>
