AE: Updated RU translations by Sergey Samsonenko
Change-Id: I3a038e61d97d072e75371502ba08c57fe5f92325

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -290,7 +290,7 @@
     <string name="lockscreen_see_through_summary">Размывать и отображать содержимое за экраном блокировки.</string>
     <string name="lockscreen_blur_radius">Интенсивность размытия</string>
     <string name="notif_drawer_weather_title">Погода</string>
-    <string name="notif_drawer_weather_summary">Включение погоды в панели навигации</string>
+    <string name="notif_drawer_weather_summary">Включение погоды в панели уведомлении</string>
     <string name="powermenu_lockscreen_title">Меню выключения на экране блокировки</string>
     <string name="powermenu_lockscreen_summary">Показывать меню при долгом нажатии на экране блокировки</string>
     <string name="stats_title">Статистика</string>
@@ -301,9 +301,10 @@
     <string name="anonymous_statistics_title">AICP статистика</string>
     <string name="anonymous_statistics_summary">Помощь AICP , анонимной статистической отчетностью</string>
     <string name="anonymous_statistics_warning_title">Об</string>
-    <string name="anonymous_statistics_warning">"Отказ в AICP Статистика позволит без личные данные должны быть представлены к нашим серверам. 
+    <string name="anonymous_statistics_warning">"Отказ в AICP Статистика позволит без личные данные должны быть представлены к нашим серверам.
        Информация, представленная включает в себя уникальный идентификатор, который не идет на компромисс вашу частную жизнь или личные данные. 
-       Данные представлены каждые 7 дней. В качестве примера данных, которые представлены, нажмите на превью данных."</string>
+       Данные представлены каждые 7 дней.
+       В качестве примера данных, которые представлены, нажмите на превью данных."</string>
     <string name="pref_settings">Настройки</string>
     <string name="enable_reporting_title">Включить отчетность</string>
     <string name="disable_reporting_persistent">Отключить отчетность</string>
@@ -548,7 +549,7 @@
     <string name="ime_enter_animation_title">Анимация входа</string>
     <string name="ime_exit_animation_title">Анимация выхода</string>
     <string name="ime_interpolator_title">Интерполятор</string>
-    <string name="ime_duration_title">IME продолжительность</string>
+    <string name="ime_duration_title">Продолжительность анимации</string>
     <string name="animation_duration_summary">Выбрать</string>
     <string name="headset_connect_player_title">Запуск плеера</string>
     <string name="headset_connect_player_summary">Запуск плеера при подключении гарнитуры</string>
@@ -613,4 +614,8 @@
     <string name="voicemail_breath_title">Уведомления голосовой почты</string>
     <string name="voicemail_breath_summary">\"Живые\" уведомления в строке состояния</string> 
     <string name="qs_transparent_header">Прозрачность заголовка панели уведомлении</string>
+    <string name="volume_dialog_transparency">Прозрачность панели громкости</string>
+    <string name="power_menu_transparency">Прозрачность меню выключения</string>
+    <string name="power_menu_dialog_dim">Прозрачность фона меню выключения</string>
+    <string name="transparency_porn_title">Опции прозрачности</string>
 </resources>
