--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -160,6 +160,7 @@
     <string name="show_carrier_statusbar">Status bar carrier</string>
     <string name="show_carrier_enabled">Enabled</string>
     <string name="status_bar_carrier_position">Status bar location</string>
+    <string name="status_bar_carrier_font_style_title">Font style</string>
 
     <!-- Battery Bar -->
     <string name="battery_bar_title">Battery bar</string>
