--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -159,7 +159,7 @@
     <string name="show_carrier_keyguard">Keyguard carrier</string>
     <string name="show_carrier_statusbar">Status bar carrier</string>
     <string name="show_carrier_enabled">Enabled</string>
-    <string name="status_bar_carrier_position">Status bar location</string>
+    <string name="status_bar_carrier_position">Label location</string>
     <string name="status_bar_carrier_font_style_title">Font style</string>
 
     <!-- Battery Bar -->
