Hide Lockscreen clock & date [2/2]
Change-Id: I27cb15828e034f9b1b8c2d24207d1906c880cfb7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -779,4 +779,9 @@
     <string name="voicemail_breath_title">Breathing Voicemail</string>
     <string name="voicemail_breath_summary">Will give your voicemail notifications a breathing effect in the statusbar</string>
 
+    <!-- Hide Lockscreen clock & date -->
+    <string name="hide_lockscreen_items_title">Lockscreen items</string>
+    <string name="hide_lockscreen_clock_title">Show lockscreen clock</string>
+    <string name="hide_lockscreen_date_title">Show lockscreen date</string>
+
 </resources>
