AE: Status bar header font style (2/2)
Reuse weather font array

Change-Id: Ie1de3e6ffd6aa48b1fc1b35ac17cd2b2c86a7e6a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -791,4 +791,7 @@
     <string name="hide_lockscreen_clock_title">Show lockscreen clock</string>
     <string name="hide_lockscreen_date_title">Show lockscreen date</string>
 
+    <!-- Status bar header font style -->
+    <string name="status_bar_header_font_style_title">Header font style</string>
+
 </resources>
