AICP French Translation (update) : packages_apps_AicpExtras
Change-Id: I7a679e61e81a250a32ce5ab3153216fd7c75cae3

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -159,6 +159,9 @@
     <string name="show_carrier_keyguard">Écran de déverrouillage uniquement</string>
     <string name="show_carrier_statusbar">Barre d\'état uniquement</string>
     <string name="show_carrier_enabled">Sur l\'écran de déverrouillage et la barre d\'état</string>
+    <string name="status_bar_carrier_position">Position du libellé opérateur</string>
+    <string name="status_bar_carrier_font_style_title">Type de la police</string>
+
 
     <!-- Battery Bar -->
     <string name="battery_bar_title">Barre de batterie</string>
@@ -347,6 +350,13 @@
     <string name="lock_clock_font_black_italic">Roboto noir italique</string>
     <string name="lock_clock_font_condensed_light_normal">Roboto condensé léger</string>
     <string name="lock_clock_font_condensed_light_italic">Roboto condensé léger italique</string>
+    <string name="lock_clock_font_dancingscript">DancingScript</string>
+    <string name="lock_clock_font_dancingscript_bold">DancingScript gras</string>
+    <string name="lock_clock_font_comingsoon">ComingSoon</string>
+    <string name="lock_clock_font_notoserif">NotoSerif Normal</string>
+    <string name="lock_clock_font_notoserif_italic">NotoSerif italique</string>
+    <string name="lock_clock_font_notoserif_bold">NotoSerif gras</string>
+    <string name="lock_clock_font_notoserif_bold_italic">NotoSerif gras italique</string>
 
     <!-- Lockscreen see through -->
     <string name="lockscreen_see_through_title">Flou de l\'écran de verrouillage</string>
@@ -775,4 +785,13 @@
     <string name="missed_call_breath_summary">Faire clignoter la notification d\'appel manqué, dans la barre d\'état</string>
     <string name="voicemail_breath_title">Messagerie Vocale</string>
     <string name="voicemail_breath_summary">Faire clignoter la notification de la messagerie vocale, dans la barre d\'état</string>
+
+    <!-- Hide Lockscreen clock & date -->
+    <string name="hide_lockscreen_items_title">Éléments affichés</string>
+    <string name="hide_lockscreen_clock_title">Afficher l\'horloge sur l\'écran de déverrouillage</string>
+    <string name="hide_lockscreen_date_title">Afficher la date sur l\'écran de déverrouillage</string>
+
+    <!-- Status bar header font style -->
+    <string name="status_bar_header_font_style_title">Style de la police de l\'en-tête</string>
+
 </resources>
