AE: Updated De translations by Ralf Luther
Change-Id: I22f1a8640bd6050a2ecbb14fbef3b05859e43fa3

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -657,7 +657,7 @@
     <string name="ime_animation_title">IME Animationen</string>
     <string name="ime_animation_summary">Lege eine andere Animation für die System-Tastatur fest</string>
     <string name="animation_settings_reset_message">Animation auf Standard zurücksetzen?</string>
-    <!-- <string name="animation_default">Standard</string> -->
+    <string name="animation_default">Standard</string>
     <string name="animation_fade">Verblassen</string>
     <string name="animation_slide_right">Gleiten von rechts</string>
     <string name="animation_slide_left">Gleiten von links</string>
