--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -156,9 +156,9 @@
     <string name="status_bar_carrier_size">Carrier label text size</string>
     <string name="show_carrier_title">Carrier label</string>
     <string name="show_carrier_disabled">Disabled</string>
-    <string name="show_carrier_keyguard">Keyguard carrier</string>
-    <string name="show_carrier_statusbar">Status bar carrier</string>
-    <string name="show_carrier_enabled">Enabled</string>
+    <string name="show_carrier_keyguard">Keyguard</string>
+    <string name="show_carrier_statusbar">Status bar</string>
+    <string name="show_carrier_enabled">Both</string>
     <string name="status_bar_carrier_position">Label location</string>
     <string name="status_bar_carrier_font_style_title">Font style</string>
 
@@ -786,10 +786,11 @@
     <string name="voicemail_breath_title">Breathing Voicemail</string>
     <string name="voicemail_breath_summary">Will give your voicemail notifications a breathing effect in the statusbar</string>
 
-    <!-- Hide Lockscreen clock & date -->
+    <!-- Hide Lockscreen clock, date & alarm -->
     <string name="hide_lockscreen_items_title">Lockscreen items</string>
     <string name="hide_lockscreen_clock_title">Show lockscreen clock</string>
     <string name="hide_lockscreen_date_title">Show lockscreen date</string>
+    <string name="hide_lockscreen_alarm_title">Show lockscreen alarm</string>
 
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Header font style</string>
