AE: Translate: <!-- Hide Lockscreen Alarm --> to German
Translated <!-- hide_lockscreen_alarm_title --> strings to German

Change-Id: I2634d187c145bf136a378582930b7acd0a15111b

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -789,8 +789,13 @@
     <string name="hide_lockscreen_items_title">Sperrbildschirmanzeigen</string>
     <string name="hide_lockscreen_clock_title">Zeige Uhrzeit auf Sperrbildschirm</string>
     <string name="hide_lockscreen_date_title">Zeige Datum auf Sperrbildschirm</string>
+    <string name="hide_lockscreen_alarm_title">Zeige Wecker auf Sperrbildschirm</string>
 
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Schriftstil des Statusleistenkopfs</string>
+
+    <!-- QS Tiles Columns -->
+    <string name="qs_num_columns_title">Anzahl von QS Kacheln pro Reihe</string>
+    <string name="qs_num_columns_showing">%1$s Kacheln werden pro Reihe angezeigt</string>
 
 </resources>
