--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -789,6 +789,7 @@
     <string name="hide_lockscreen_items_title">Sperrbildschirmanzeigen</string>
     <string name="hide_lockscreen_clock_title">Zeige Uhrzeit auf Sperrbildschirm</string>
     <string name="hide_lockscreen_date_title">Zeige Datum auf Sperrbildschirm</string>
+    <string name="hide_lockscreen_alarm_title">Zeige Wecker auf Sperrbildschirm</string>
 
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Schriftstil des Statusleistenkopfs</string>
